<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="40sp"
        android:text="@string/screen_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:id="@+id/cardViewForAndroidAppDevelopment"
            android:layout_marginTop="20sp"
            android:layout_marginStart="15sp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30sp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/android_application_development"
                android:textColor="@color/blueDark"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:id="@+id/cardViewForWebDevelopment"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueDark"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/web_development" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:id="@+id/cardViewForIOSDevelopment"
            android:layout_marginTop="20sp"
            android:layout_marginStart="15sp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30sp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ios_application_development"
                android:textColor="@color/blueDark"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:id="@+id/cardViewForMachineLearnging"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueDark"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/machine_learning" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:id="@+id/cardViewForBlockChainDevelopment"
            android:layout_marginTop="20sp"
            android:layout_marginStart="15sp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30sp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/block_chain_development"
                android:textColor="@color/blueDark"
                android:textSize="25sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:id="@+id/cardViewForAffiliateMarketing"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20sp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueDark"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/artificial_intelligence" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/buttonForContactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:backgroundTint="@drawable/button_background"
        android:text="@string/contact_us" />

</LinearLayout>